--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MaxymH.github.io/goit-re-hw-07-phoneBook/",
+  "homepage": "https://MaxymH.github.io/goit-re-hw-08",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.3",
